# duckdb-cassandra

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALLATION.md  Makefile  README.md  demo_extension.sql  extension_config.cmake  test.sh  vcpkg.json
src/: CMakeLists.txt  cassandra_attach.cpp  cassandra_client.cpp  cassandra_extension.cpp  cassandra_scan.cpp  cassandra_settings.cpp  cassandra_types.cpp  cassandra_utils.cpp
src/include/: cassandra_attach.hpp  cassandra_client.hpp  cassandra_extension.hpp  cassandra_scan.hpp  cassandra_settings.hpp  cassandra_types.hpp  cassandra_utils.hpp
src/storage/: cassandra_catalog.cpp  cassandra_catalog.hpp  cassandra_schema_entry.cpp  cassandra_schema_entry.hpp  cassandra_table_entry.cpp  cassandra_table_entry.hpp  cassandra_transaction.cpp  cassandra_transaction.hpp
test/: README.md  astra_connection_test.cpp  simple_cassandra_test  simple_cassandra_test.cpp  test_cassandra_client.cpp  test_client_Makefile
test/bundle/: cert  cert.pfx  config.json  cqlshrc  identity.jks  key  trustStore.jks
